welcome_page_design
Design of welcome page
templates for future subscription implementation

--- a/NativeSpark/src/main/resources/templates/subscription.html
+++ b/NativeSpark/src/main/resources/templates/subscription.html
@@ -102,34 +102,34 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-    <div class="container px-5">
-        <a class="navbar-brand" th:href="@{/}">NativeSpark</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/about}">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/}">Home</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/account}">My Account</a>
-                </li>
-                <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a class="nav-link" th:href="@{/login}">Login</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/logout}">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<!--<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">-->
+<!--    <div class="container px-5">-->
+<!--        <a class="navbar-brand" th:href="@{/}">NativeSpark</a>-->
+<!--        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"-->
+<!--                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+<!--            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/about}">About Us</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" th:href="@{/}">Home</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item" sec:authorize="isAuthenticated()">-->
+<!--                    <a class="nav-link" th:href="@{/account}">My Account</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item" sec:authorize="!isAuthenticated()">-->
+<!--                    <a class="nav-link" th:href="@{/login}">Login</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item" sec:authorize="isAuthenticated()">-->
+<!--                    <a class="nav-link" th:href="@{/logout}">Logout</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</nav>-->
 
 <div class="container px-4 px-lg-5 content">
     <div class="row justify-content-center my-5">
@@ -160,7 +160,7 @@
                     <div class="card subscription-card" id="premiumCard" onclick="selectSubscription('Premium')">
                         <div class="card-body text-center">
                             <h5 class="card-title">Premium</h5>
-                            <p class="card-text" id="premiumText">CAD 109 per month</p>
+                            <p class="card-text" id="premiumText">CAD 139 per month</p>
                         </div>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
         const premiumText = document.getElementById('premiumText');
         const subscriptionTypeInput = document.getElementById('subscriptionType');
 
-        if (userType === 'entrepreneur') {
+        if (userType === 'ENTREPRENEUR') {
             // Disable free and basic cards
             freeCard.classList.add('disabled-card');
             basicCard.classList.add('disabled-card');
